Fixed resume on mobile browsers

--- a/style.css
+++ b/style.css
@@ -67,22 +67,29 @@ body {
 .bio_container {
     display: grid;
     grid-template-columns: 1fr 8fr;
+    grid-template-rows: 1fr 4fr;
     margin-bottom: 20px;
 }
 
 .sidebar {
+    grid-row: 1/3;
     display: flex;
     background-color: white;
     border-radius: 5px;
     box-shadow: 5px 5px 10px skyblue;
-    align-items: center;
     justify-content: center;
-    padding-right: 10p
+    margin-top: 0px;
 }
 
 .sidebar ul {
     margin: 0;
     padding: 10px;
+}
+
+.name {
+    margin-left: 15px;
+    color: white;
+    text-shadow: 2px 2px 2px skyblue;
 }
 
 .bio_content {
@@ -107,7 +114,7 @@ body {
     object-fit: cover;
 }
 
-.a {
+.a:hover {
     cursor: pointer;
 }
 
@@ -147,7 +154,7 @@ body {
 }
 
 .from-right {
-    transform: translatex(50%)
+    transform: translateX(50%);
 }
 
 .from-left,
@@ -158,7 +165,7 @@ body {
 }
 
 .from-left.appear,
-.from-right.appear{
+.from-right.appear {
     transition: opacity 250ms ease-in,
     transform 600ms ease-in;
     transform: translateX(0);
